--- a/SRS/SRS.tex
+++ b/SRS/SRS.tex
@@ -403,7 +403,7 @@ The risks that may need to be overcome during the implementation of this project
 \begin{enumerate}[{PAR}1. ]
 \item The application must give appropriate results depending on the exact radius the user requested.
 
-\item Inputted radius must be accurate to \~100 meters.
+\item Inputted radius must be accurate to $\sim$100 meters.
 \end{enumerate}
 % End SubSubSection
 
