--- a/SRS/SRS.tex
+++ b/SRS/SRS.tex
@@ -146,6 +146,12 @@ The application will be geographically limited to the United States and will onl
 \subsection{Stakeholders}
 The stakeholders of this project include the team members, the instructor and teaching assistants of the CAS 2XB3 course, and any persons seeking employment who would use the tool.
 
+\medskip
+
+
+The goals of every stakeholder vary. The goal of the team members is to create a useful application that allows the user who is seeking employment to have a simple and effective experience. The instructor and teaching assistant are meant to guild the team members to build the application to be successful. The relationship between all stakeholders is that they all share a common objective. Which is to have a functional application that helps persons looking for employment. 
+
+
 
 % End SubSection
 
